# difra

./: MATADOR_DATA_REQUIREMENTS_SPEC.md  MATADOR_SHORT_REQUIREMENTS.md  MATADOR_STRUCTURE_QUESTIONS.md  README.md  pyproject.toml
.codex/environments/: environment.toml
scripts/: check_difra_branch_parity.sh  check_protocol_sync.sh  ulster_real_test_preflight.sh
src/difra/: CONTAINER_INTEROP_BOUNDARY.md  DIFRA_HDF5_Data_Model_FINAL.md  MATADOR_UPLOAD_API_DRAFT.md  README.md  REAL_HARDWARE_TEST_PLAN_2026-03-23.md  __init__.py  _local_dependency_aliases.py  autosave_state_prev.json  difra_hdf5_schema.html  runtime_deps.py  (+3 more)
tests/: conftest.py  test_archive_session_edit_dialog.py  test_container_api_core.py  test_container_validation_core.py  test_drawing_extension.py  test_hardware_auxiliary.py  test_local_dependency_aliases.py  test_logger_utils.py  test_logging_setup.py  test_main_window_archive_sync.py  test_matador_runtime_context.py  test_matador_upload_api.py  test_matador_zip_bundle_exporter.py  test_measurement_history_widget.py  test_new_session_dialog.py  test_operator_dialog_logic.py  test_operator_manager_core.py  test_poni_center_preview.py  test_poni_center_validation.py  test_process_capture_mixin.py  test_process_results_mixin.py  test_protocol_guardrails.py  test_pyfai_env_resolution.py  test_rotation_extension.py  test_runtime_deps.py  test_script_entrypoints.py  test_session_flow_actions.py  test_smoke.py  test_sync_archive_to_onedrive.py  test_technical_capture_mixin.py  test_technical_capture_window.py  test_technical_panel_mixin.py  test_technical_temp_manager.py  test_zone_measurement_utilities.py  test_zone_measurements_file_mixin.py  test_zone_points_actions.py
(+378 files in other folders)
